tests/baselines/reference/es3-oldStyleOctalLiteralTypes.errors.txt
error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
tests/cases/compiler/es3-oldStyleOctalLiteralTypes.ts(1,8): error TS8017: Octal literal types must use ES2015 syntax. Use the syntax '0o10'.
tests/cases/compiler/es3-oldStyleOctalLiteralTypes.ts(2,8): error TS8017: Octal literal types must use ES2015 syntax. Use the syntax '-0o20'.


!!! error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== tests/cases/compiler/es3-oldStyleOctalLiteralTypes.ts (2 errors) ====
    let x: 010;
           ~~~
!!! error TS8017: Octal literal types must use ES2015 syntax. Use the syntax '0o10'.
    let y: -020;
           ~~~~
!!! error TS8017: Octal literal types must use ES2015 syntax. Use the syntax '-0o20'.
    